@@ -857,7 +857,9 @@ class BrowserView extends JPanel
 				if(obj instanceof VFS.DirectoryEntry)
 				{
 					VFS.DirectoryEntry file = (VFS.DirectoryEntry)obj;
-					if(file.name.regionMatches(ignoreCase,
+					String matchAgainst = (MiscUtilities.isAbsolutePath(str)
+						? file.path : file.name);
+					if(matchAgainst.regionMatches(ignoreCase,
 						0,str,0,str.length()))
 					{
 						setSelectionRow(i);
